fix(main): increase z-index for help icon

--- a/assets/app/main.css
+++ b/assets/app/main.css
@@ -282,6 +282,8 @@ img{
     margin-bottom: auto;
     cursor: pointer;
     pointer-events: auto !important;
+    z-index: 10001 !important;
+    position: relative;
 }
 
 .main_button{
